Keep the publisher's own order, so two runs of one tree agree
The reading was not deterministic. Two selfRead runs over an unchanged
tree placed this repository in different fields: Mathematics at 0.3660
bits in one and 0.5306 in the next, with Computer Science unmoved at
0.3686 between them, so the headline answer to "what field is this in"
depended on which run you read.

ArxivSubjects held its concepts in a Map.copyOf, and Java's immutable
maps randomise iteration order once per JVM. Nothing downstream sorts,
and the archive-level reading pools every description under an archive
by joining them — so the joined text was assembled in a different order
every run, and a description that ends without a full stop takes its
neighbour's words into its own sentence. The leaf readings, each taken
over one description alone, never moved.

The order the publisher states is now kept. A citation's own order is
part of the citation. Two consecutive runs now write byte-identical
reports.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>