@@ -1,5 +1,6 @@
 package org.fifties.housewife.bi.lexicon;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -24,8 +25,15 @@ public final class ArxivSubjects {
 
     private final Map<String, SkosConcept> byConcept;
 
+    /**
+     * The publisher's own order is kept, and that is not tidiness. An immutable map randomises its iteration
+     * order once per JVM, so a reading that pools several of these descriptions joined them differently on
+     * every run: this repository's archive-level placement read Mathematics at 0.3660 bits in one run and
+     * 0.5306 in the next over an unchanged tree, which changed the field it reported. A citation's own order
+     * is part of the citation.
+     */
     private ArxivSubjects(final Map<String, SkosConcept> byConcept) {
-        this.byConcept = Map.copyOf(byConcept);
+        this.byConcept = Collections.unmodifiableMap(new LinkedHashMap<>(byConcept));
     }
 
     public static ArxivSubjects fromClasspath() {
